--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
-<head lang="ja">
+<html lang="ja">
+<head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>kcs</title>
 </head>
 <body>
-    <p>Hello, World!</p>
-    <canvas id="canvas"></canvas>
+    <p>お絵描きしてください</p>
+    <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
+    <div>
+        <button id="clear-button">clear</button>
+    </div>
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
