色機能, 太さ機能追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,10 @@
     <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
     <div>
         <button id="clear-button">clear</button>
+        <input id="color" type="color">
+        <label>太さ<input id="width" type="number" min="1" max="30"></label>
+        <button id="pencil">鉛筆</button>
+        <button id="eraser">消しゴム</button>
     </div>
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
