画像保存機能追加:WIP

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,11 @@
         <label>太さ<input id="width" type="number" min="1" max="30"></label>
         <button id="pencil">鉛筆</button>
         <button id="eraser">消しゴム</button>
+        <button id="save">画像を保存</button>
+    </div>
+    <div>
+        <p>保存された画像</p>
+        <img id="output" src="">
     </div>
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
