--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
 {% load static %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='slim' %}
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -6,21 +9,34 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>kcs</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <script src="https://kit.fontawesome.com/779c2b0f03.js"></script>
 </head>
 <body>
-    <p>お絵描きしてください</p>
-    <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
-    <div>
-        <button id="clear-button">clear</button>
-        <input id="color" type="color">
-        <label>太さ<input id="width" type="number" min="1" max="30"></label>
-        <button id="pencil">鉛筆</button>
-        <button id="eraser">消しゴム</button>
-        <button id="save">画像を保存</button>
-    </div>
-    <div>
-        <p>保存された画像</p>
-        <img id="output" src="">
+    <nav class="navbar navbar-dark bg-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">予測モデル</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">CycleGAN</a>
+                    <a class="dropdown-item" href="#">pix2pix</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12">
+            <div class="card-header">お絵描きしてください</div>
+            <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
+            <div>
+                <button id="clear-button" class="btn btn-inline">clear</button>
+                <input id="color" class="btn btn-inline" type="color">
+                <label>太さ<input id="width" type="number" min="1" max="30"></label>
+                <button id="pencil" class="btn btn-inline"><i class="fas fa-pen"></i></button>
+                <button id="eraser" class="btn btn-inline"><i class="fas fa-eraser"></i></button>
+                <button id="save" class="btn btn-inline">画像を保存</button>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
