--- a/templates/index.html
+++ b/templates/index.html
@@ -3,32 +3,31 @@
 
 {% block title %}kcs{% endblock %}
 {% block content %}
-    <nav class="navbar navbar-dark bg-dark">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">予測モデル</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">CycleGAN</a>
-                    <a class="dropdown-item" href="#">pix2pix</a>
-                </div>
-            </li>
-        </ul>
-    </nav>
-    <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-10 col-sm-12">
-            <div class="card-header">お絵描きしてください</div>
-            <div class="row justify-content-left">
-                <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
-                <img id="output" src="">
+<nav class="navbar navbar-dark bg-dark block">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">予測モデル</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">CycleGAN</a>
+                <a class="dropdown-item" href="#">pix2pix</a>
             </div>
-            <div>
-                <button id="clear-button" class="btn btn-inline">clear</button>
-                <input id="color" class="btn btn-inline" type="color">
-                <label>太さ<input id="width" type="number" min="1" max="30"></label>
-                <button id="pencil" class="btn btn-inline"><i class="fas fa-pen"></i></button>
-                <button id="eraser" class="btn btn-inline"><i class="fas fa-eraser"></i></button>
-                <button id="predict" class="btn btn-inline">予測する</button>
-            </div>
+        </li>
+    </ul>
+</nav>
+<div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+        <div class="card-header">お絵描きしてください</div>
+        <div class="row justify-content-left">
+            <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
+        </div>
+        <div>
+            <button id="clear-button" class="btn btn-inline">clear</button>
+            <input id="color" class="btn btn-inline" type="color">
+            <label>太さ<input id="width" type="number" min="1" max="30"></label>
+            <button id="pencil" class="btn btn-inline"><i class="fas fa-pen"></i></button>
+            <button id="eraser" class="btn btn-inline"><i class="fas fa-eraser"></i></button>
+            <button id="predict" class="btn btn-inline btn-primary">予測する</button>
         </div>
     </div>
+</div>
 {% endblock %}
