--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,9 @@
+.container {
+    margin: 0%;
+    padding: 0%;
+}
+
+
 #pencil:active {
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
