--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card-header">お絵描きしてください</div>
         <div class="row justify-content-left">
-            <canvas id="canvas" width="400px" height="400px" style="border: 1px solid #000000"></canvas>
+            <canvas id="canvas" width="256px" height="256px" style="border: 1px solid #000000"></canvas>
         </div>
         <div>
             <button id="clear-button" class="btn btn-inline">clear</button>
@@ -27,6 +27,7 @@
             <button id="pencil" class="btn btn-inline"><i class="fas fa-pen"></i></button>
             <button id="eraser" class="btn btn-inline"><i class="fas fa-eraser"></i></button>
             <button id="predict" class="btn btn-inline btn-primary">予測する</button>
+            <input type="file" name="image_file" accept="image/*" id="id_image">
         </div>
     </div>
 </div>
