--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
         <div class="card-header">お絵描きしてください</div>
         <div class="row justify-content-left">
             <canvas id="canvas" width="256px" height="256px" style="border: 1px solid #000000"></canvas>
+            <img src="" width="256px" height="256px">
         </div>
         <div>
             <button id="clear-button" class="btn btn-inline">clear</button>
