デザイン修正

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <main class="container">
+    <main>
         {% block content %}{% endblock %}
     </main>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
