--- a/templates/index.html
+++ b/templates/index.html
@@ -22,22 +22,23 @@
 <div class="card-header">お絵描きしてください</div>
 <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
-        <div class="row justify-content-around">
+        <div class="row justify-content-center">
             <canvas id="canvas" width="256px" height="256px" style="border: 1px solid #000000"></canvas>
-            <div class="column">
-                <i class="fas fa-long-arrow-alt-right"></i>
-                <button id="predict" class="btn btn-inline btn-primary">予測する</button>
-            </div>
             <img id="output" src="" width="256px" height="256px">
-        </div>
-        <div>
-            <button id="clear-button" class="btn btn-inline">clear</button>
-            <input id="color" class="btn btn-inline" type="color">
-            <label>太さ<input id="width" type="number" min="1" max="30"></label>
-            <button id="pencil" class="btn btn-inline"><i class="fas fa-pen"></i></button>
-            <button id="eraser" class="btn btn-inline"><i class="fas fa-eraser"></i></button>
-            <input type="file" class="form-control-file" id="form">
+            <div class="">
+                <button id="clear-button" class="btn btn-inline">clear</button>
+                <input id="color" class="btn btn-inline" type="color">
+                <label>太さ<input id="width" type="number" min="1" max="30"></label>
+                <button id="pencil" class="btn btn-inline"><i class="fas fa-pen"></i></button>
+                <button id="eraser" class="btn btn-inline"><i class="fas fa-eraser"></i></button>
+                <button id="predict" class="btn btn-inline btn-primary">予測する</button>
+                <input type="file" class="form-control-file" id="form">
+            </div>
         </div>
     </div>
+</div>
+
+<div class="card-footer">
+フッターです
 </div>
 {% endblock %}
