--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="row justify-content-center">
             <canvas id="canvas" width="256px" height="256px" style="border: 1px solid #000000"></canvas>
+            <canvas id="out" width="256px" height="256px"></canvas>
             <img id="output" src="" width="256px" height="256px">
             <div class="">
                 <button id="clear-button" class="btn btn-inline">clear</button>
