--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,7 @@
 <div class="collapse" id="collapseExample">
     <div class="card card-body">
         <ul>
-            <li><a href="">ポケモン画像変換</a></li>
-            <li><a href="">MB</a></li>
+            <li><a href="#tool">ポケモン画像変換</a></li>
         </ul>
     </div>
 </div>
@@ -26,7 +25,7 @@
             <canvas id="canvas" width="256px" height="256px" style="border: 1px solid #000000"></canvas>
             <canvas id="out" width="256px" height="256px"></canvas>
             <img id="output" src="" width="256px" height="256px">
-            <div class="">
+            <div id="tool">
                 <button id="clear-button" class="btn btn-inline">clear</button>
                 <input id="color" class="btn btn-inline" type="color">
                 <label>太さ<input id="width" type="number" min="1" max="30"></label>
@@ -38,7 +37,6 @@
                     <div class="input-group">
                         <input type="text" class="form-control" readonly="">
                         <label class="input-group-btn">
-                            {{ form.as_p }}
                             <span class="btn btn-success">
                                 Choose File<input type="file" name="docfile" style="display:none;" id="input-file" accept="image/*" >
                             </span>
@@ -49,8 +47,7 @@
         </div>
     </div>
 </div>
-
-<div class="card-footer">
+<div class="card-footer fixed-bottom">
 フッターです
 </div>
 {% endblock %}
